feat(android): verify the real sync writer live, end-to-end, 3/3
Switches SupabaseRestClient from HttpURLConnection to OkHttp: PATCH isn't in
HttpURLConnection's method allow-list, and the reflection workaround (setting
the protected `method` field directly) proved unreliable against the real
endpoint across several JDK-internals-level fixes (JPMS --add-opens,
HttpsURLConnectionImpl's delegate indirection) -- the request never matched
what an equivalent curl -X PATCH produced. java.net.http.HttpClient (PATCH-
native) isn't an option either: confirmed 0 java/net/http entries in
android-36/android.jar. OkHttp is the industry-standard fix for exactly this
gap, not a broader networking-stack decision.

With explicit, narrowly-scoped authorization, the investigation went one step
further than the previous commit: the test project's `authenticated` role was
also missing table grants (HTTP 403 42501, with Postgres's own GRANT hint) --
fixed with a single explicit statement against the test project only, via a
verified temporary relink-and-back so production was never touched.

SupabaseRemoteMutationWriterLiveTest now passes 3/3 for real: two independent
sessions for one test user (RLS is per-auth.uid(), so this correctly simulates
two devices) racing a title update, with the earlier write confirmed rejected
as a Conflict carrying the winning row rather than silently dropped or wrongly
applied, plus a user_prefs.ledger_layout upsert read back and confirmed
correct. Also fixed two test-fixture bugs the live run caught: a hardcoded
tmdb_id collided with `titles`' unique(user_id, tmdb_id, type) constraint
across repeated runs, and hardcoded past-dated timestamps always lost against
a freshly-inserted row's real (trigger-set) insert-time `updated_at` -- both
replaced with randomized/real-clock-relative values.

This answers Phase 2 and Phase 3's remaining open questions: last-write-wins
conflict resolution and Ledger layout sync both work end-to-end against the
real backend, no